css/theme.scss
/* ... */
.google {
  display: grid;
  grid-template-columns: 60px 1fr;
  gap: 0 8px;
  grid-template-areas: "logo header" "logo rating" "logo count";
  font-size: 14px;
  line-height: 20px;
  svg {
    grid-area: logo;
    width: 60px;
    height: 60px;
    align-self: center;
  }
  strong {
    grid-area: header;
  }
  span {
    grid-area: rating;
  }
  a {
    grid-area: count;
    font-size: 12px;
  }
}

.homepage-header {
  --background:
    linear-gradient(77deg, #181a1f 27.31%, rgba(24, 26, 31, 0) 80.67%),
    url("/assets/homepage-header-background.jpg");
  --color-text: #fdfdfd;
  --color-link: #fdfdfd;
  --color-link-hover: #fdfdfd;
  @include themed-section;

  background-size: cover;
  position: relative;
  padding-bottom: 0; // handled by slider margin

  .homepage-header-inner {
    @include flex-column(0);

    & > * {
      padding: 0;
      margin: 0;
    }
    & > h1 {
      margin: 8px 0 var(--gap-items);
    }
    & > .google {
      margin: var(--section-padding-half) 0 0;
    }
    ul.items.slider {
      margin: var(--section-padding-half) 0
        calc(var(--section-padding-half) / 2);
    }
  }

  h1 {
    max-width: 650px;
    font-size: 52px;
    line-height: 52px;
  }
  .button {
    background: transparent;
    border-color: var(--color-border);
    @include button-white-transparent;
  }
  .items {
    li {
      position: relative;
      width: 270px !important;
      height: 270px;
      margin: 0;
      border-radius: 8px;
      overflow: hidden;
      .image-link {
        width: 270px;
        height: 270px;
        position: absolute;
        top: 0;
        left: 0;
        padding: 0;
        margin: 0;
        &::before {
          content: "";
          display: block;
          position: absolute;
          top: 0;
          left: 0;
          width: 270px;
          height: 270px;
          z-index: 2;
          transition: background 0.3s ease-in-out;
          background: linear-gradient(
            180deg,
            rgba(0, 0, 0, 0) 0%,
            rgba(0, 0, 0, 0.8) 100%
          );
        }
      }
      &.all-categories .image-link::before {
        background: linear-gradient(
          180deg,
          rgba(238, 51, 36, 0) 0%,
          #ee3324c7 100%
        );
      }
      .image-wrapper,
      img {
        object-fit: cover;
        position: absolute;
        top: 0;
        left: 0;
        width: 270px;
        height: 270px;
        padding: 0;
        margin: 0;
        border-bottom-left-radius: 0;
        border-bottom-right-radius: 0;
      }
      h3 {
        color: #fafafa;
        position: absolute;
        font-size: 20px;
        line-height: 20px;
        top: 32px;
        bottom: 32px;
        left: 32px;
        right: 32px;
        padding: 0;
        z-index: 5;
        align-content: end;
        display: flex;
        align-self: end;
      }
      p {
        text-align: right;
      }
    }
  }
  .slider-nav {
    a {
      background-color: #fdfdfd;
      color: #111;
    }
    @include breakpoints.up("md") {
      position: absolute;
      top: 16px;
      right: 80px;
      display: flex;
      flex-direction: column;
      margin: 0;
    }
  }
}

.homepage-intro {
  & > * {
    max-width: 700px;
    text-align: left;
  }
  h1 {
    @include heading;
  }
  a.button {
    width: 303px;
  }
}

.item-reviews {
  h2 {
    @include heading;
    margin-bottom: var(--section-padding-half);
  }
  p {
    margin: 0;
    padding: 0;
  }
  h3 {
    margin: 0 0 16px;
    padding: 0;
  }
  .slider-container {
    max-width: calc(100vw - var(--gap-items));
  }
  ul.items.slider {
    margin: var(--gap-items) 0 calc(var(--gap-items) / 2);
  }
}

.testimonials-slider {
  @include section-padding;
  padding-bottom: calc(var(--section-padding) - (var(--gap-items) / 2));
  h2 {
    @include heading;
    margin: 0 0 calc(var(--gap-items) / 2);
  }
  h3 {
    margin: 0 0 calc(var(--gap-items) / 2);
    padding: 0;
  }
  p.rating {
    margin: 0;
    padding: 0;
  }
  .slider-container {
    margin: calc(var(--gap-items) / 2) 0;
  }
  @include breakpoints.up("sm") {
    display: grid;
    gap: 16px;
    grid-template-columns: 1fr min-content;
    grid-template-areas:
      "title title"
      "left right"
      "reviews reviews";

    h2 {
      grid-area: title;
    }
    .left {
      grid-area: left;
    }
    .right {
      grid-area: right;
    }
    .slider-container {
      grid-area: reviews;
    }
  }
}

.testimonials-slider,
.item-reviews,
body.reviews,
body.event,
body.base {
  ul.items {
    @include list-reset;
    @include flex-row;
    padding: var(--gap-items) 0 calc(var(--gap-items) / 2);
    margin: 0 0 calc(var(--gap-items) / 2);
    > li {
      @include card;
      padding: 24px;
      border-radius: 16px;
      border: 1px solid #989898;
      background: #f3f3f3;
      gap: 16px;
      width: 445px !important;
      display: grid;
      grid-template-areas: "rating" "content" "name" "avatar";

      & > .rating {
        grid-area: rating;
      }
      & > .name {
        grid-area: name;
        font-weight: 500;
      }
      & > blockquote {
        grid-area: content;
        text-align: left;
        color: #1a1a1a;
        font-size: 16px;
        font-style: normal;
        font-weight: 400;
        line-height: 20px; /* 125% */
        height: 135px;
        overflow-y: auto;
        & > p {
          margin: 0 0 calc(var(--gap-items) / 2);
        }
      }
      & > img {
        grid-area: avatar;
        border-radius: 100%;
        width: 40px;
        border: 2px solid white;
      }

      & > * {
        padding: 0;
        margin: 0;
      }
    }
  }
}
/* ... */

